--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  namespace: nginx
+  namespace: default
   labels:
     app: nginx-app
     name: nginx
