--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx:1.14.2
+          image: us-central1-docker.pkg.dev/black-anagram-431013-u8/docker-repository/myapp:1.0.0
           ports:
             - containerPort: 80
