--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: myapp-service
   namespace: default
-  labels:
-    app: nginx-app
-    name: nginx
 spec:
   type: NodePort
   ports:
     - name: nginx-port
       port: 80
-      targetPort: 80
+      targetPort: 3000
       protocol: TCP
   selector:
-    app: nginx
+    app: myapp
