--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: sample-app-deployment
   namespace: default
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: myapp
-  replicas: 4
+      app: sample-app
   template:
     metadata:
       labels:
-        app: myapp
+        app: sample-app
     spec:
       containers:
-        - name: myapp
-          image: us-central1-docker.pkg.dev/black-anagram-431013-u8/docker-repository/myapp:1.0.0
+        - name: sample-app
+          image: us-central1-docker.pkg.dev/your-project-id/docker-repository/sample-app:1.0.0
           ports:
             - containerPort: 3000
