--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: sample-app-service
   namespace: default
 spec:
-  type: NodePort
+  type: LoadBalancer
+  selector:
+    app: sample-app
   ports:
-    - name: nginx-port
+    - protocol: TCP
       port: 80
       targetPort: 3000
-      protocol: TCP
-  selector:
-    app: myapp
