--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample-app-deployment
+  name: node-app-deployment
   namespace: default
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: sample-app
+      app: node-app
   template:
     metadata:
       labels:
-        app: sample-app
+        app: node-app
     spec:
       containers:
-        - name: sample-app
+        - name: node-app
           image: us-central1-docker.pkg.dev/black-anagram-431013-u8/docker-repository/sample-app:1.0.0
           ports:
             - containerPort: 3000
