--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app-service
+  name: node-app-service
   namespace: default
 spec:
   type: LoadBalancer
   selector:
-    app: sample-app
+    app: node-app
   ports:
     - protocol: TCP
       port: 80
